# -Northstar-Crypto-

./: .env.example  .gitignore  LICENSE  NORTHSTAR_PRODUCT_PAGE.md  README.md  atlas_server.py  autostart.ps1  npu_bridge.py  phi3_server.py  start_ai.ps1  start_all.bat  stop_all.bat
codezero-team-hub/: index.html  package.json  vite.config.js
data/: nemo9b_entry_prompt.txt  nemo9b_exit_prompt.txt  nemo_exit_prompt.txt  nemo_meme_entry_prompt.txt  nemo_optimizer_prompt.txt  nemo_reflection_prompt.txt  npu_scan_prompt.txt  strategy.toml
docs/: A-Z_REVIEW_REPORT.md  ARCHITECTURE_SUMMARY.md  INSTALLATION_GUIDE.md  OPERATOR_RUNBOOK.md  OPTIMIZATION_PLAN.md  PRODUCT_OVERVIEW.md  PROFITABILITY_ANALYSIS.md  PROFIT_MATRIX.md  RELEASE_NOTES.md  SUPPORT.md  TUNING_IMPLEMENTATION_PLAN.md  data_cleanup_plan.md  decision_funnel_report.md  kerb_quality_report.md  migration_map.md  strategies.md  sync_guide.md
rust_core/: Cargo.toml  build.rs  deny.toml
rust_core/.cargo/: config.toml
rust_core/cuda/: quant_kernels.cu
rust_core/src/: lib.rs  main.rs  nemo_chat.rs  nemo_optimizer.rs
rust_core/src/addons/: backtester.rs  cloud_intel.rs  gpu_math.rs  memory_packet.rs  mod.rs  mover_scanner.rs  nemo_memory.rs  news_sentiment.rs  npu_bridge.rs  ohlcv_fetcher.rs  vision_scanner.rs
rust_core/src/config/: addons.rs  llm.rs  mod.rs  paths.rs  schedule.rs  trading.rs
rust_core/src/engine/: decision_log.rs  entries.rs  exits.rs  fee_filter.rs  helpers.rs  journal.rs  lane.rs  mod.rs  orders.rs  portfolio.rs  portfolio_allocator.rs  portfolio_optimizer.rs  regime_sm.rs  rules_eval.rs  tick.rs  tools.rs  trade_flow.rs
rust_core/src/infra/: book.rs  error.rs  event_bus.rs  kraken_api.rs  mod.rs  ws.rs
rust_core/src/llm/: LLM_INTEGRATION_GUIDE.md  client.rs  mod.rs  nemo_exit.rs  nvidia_tools.rs  parse.rs  prompts.rs
rust_core/src/signals/: features.rs  gbdt.rs  market_brain.rs  market_watcher.rs  mod.rs  strategy.rs  strategy_helpers.rs
scripts/: build_all.ps1  clean_state.py  decision_funnel_report.ps1  generate_blob_manifest.ps1  health.ps1  (+13 more)
(+7 files in other folders)
